# boosting-grf

./: MANIFEST.in  README.md  boosting_trees_alg1_python_updated.py  causalgrf.txt  pyproject.toml  setup.cfg  setup.py  table1_results.json  test.py
.pytest_cache/v/cache/: nodeids
boosting_grf/: __init__.py  _grf_bindings.cpp  caches.py  datasets.py  grf.py  model.py  split.py  stage1.py  stage2.py  tree.py  utils.py
boosting_grf.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/: __init__.py  _parallel.py  benchmark_table1.py  benchmark_table1_compare.py  plot_rmse_comparison.py  plot_rmse_panel.py  test_basic.py  visualize_table1.py
