[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boosting-grf"
version = "0.1.0"
description = "Algorithm 1 tree-structure boosting implementation for generalized random forests"
readme = "README.md"
authors = [{name = "Boosting GRF Team"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "matplotlib",
    "pytest",
    "tqdm",
]

[project.urls]
Homepage = "https://example.com/boosting-grf"

[tool.setuptools]
packages = ["boosting_grf"]
