[metadata]
name = boosting-grf
version = 0.1.0
description = Algorithm 1 tree-structure boosting implementation
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
install_requires =
    numpy
    tqdm
python_requires = >=3.9

[options.extras_require]
dev =
    matplotlib
    pytest
    pytest-cov
